<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 🔹 Container ng Calendar input-->
    <LinearLayout
        android:id="@+id/calendarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/inputContainer"
        android:background="@color/bone"
        android:padding="16dp">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <!-- Month and Year -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="16dp">

                <ImageButton
                    android:id="@+id/btnPrevMonth"
                    android:src="@drawable/ic_arrow_left"
                    android:background="@null"
                    android:contentDescription="@string/previous_month"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:tint="@color/kombuGreen"/>

                <TextView
                    android:id="@+id/tvMonthYear"
                    android:text="@string/month_year"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/kombuGreen"
                    android:layout_marginHorizontal="16dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <ImageButton
                    android:id="@+id/btnNextMonth"
                    android:src="@drawable/ic_arrow_right"
                    android:background="@null"
                    android:contentDescription="@string/next_month"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:tint="@color/kombuGreen"/>
            </LinearLayout>

            <!-- Calendar Grid -->
            <GridLayout
                android:id="@+id/calendarGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="7"
                android:rowCount="6"
                android:alignmentMode="alignBounds"
                android:useDefaultMargins="true"
                android:layout_marginBottom="24dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- 🔹 Container ng input-->
    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bone"
        android:elevation="6dp"
        android:padding="16dp"
        android:layout_alignParentBottom="true">

        <!-- Input Fields -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp">

            <!-- Row 1 User Input na Crop and Area-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/inputCrop"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/crop"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:inputType="text"
                    android:dropDownHeight="wrap_content"
                    android:dropDownVerticalOffset="8dp"
                    android:dropDownHorizontalOffset="0dp"
                    android:completionThreshold="1"
                    />

                <View android:layout_width="8dp" android:layout_height="0dp"/>

                <AutoCompleteTextView
                    android:id="@+id/inputArea"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/area"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:maxLines="1"
                    android:inputType="number"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/inputSoilType"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/soil_type"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:dropDownHeight="wrap_content"
                    android:dropDownVerticalOffset="8dp"
                    android:dropDownHorizontalOffset="0dp"
                    android:completionThreshold="1"
                    android:focusable="true"
                    android:clickable="true"
                    />

                <View android:layout_width="8dp" android:layout_height="0dp"/>

                <AutoCompleteTextView
                    android:id="@+id/inputIrrigationLevel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/irrigation_level"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:dropDownHeight="wrap_content"
                    android:dropDownVerticalOffset="8dp"
                    android:dropDownHorizontalOffset="0dp"
                    android:completionThreshold="1"
                    android:focusable="true"
                    android:clickable="true"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="8dp">

                <AutoCompleteTextView
                    android:id="@+id/inputPlantDensity"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/planting_density"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:dropDownHeight="wrap_content"
                    android:dropDownVerticalOffset="8dp"
                    android:dropDownHorizontalOffset="0dp"
                    android:completionThreshold="1"
                    android:focusable="true"
                    android:clickable="true"
                    />

                <View android:layout_width="8dp" android:layout_height="0dp"/>

                <AutoCompleteTextView
                    android:id="@+id/inputFertilizerUsed"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/fertilizer_used"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"
                    android:dropDownHeight="wrap_content"
                    android:dropDownVerticalOffset="8dp"
                    android:dropDownHorizontalOffset="0dp"
                    android:completionThreshold="1"
                    android:focusable="true"
                    android:clickable="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/inputWeather"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/weather_condition"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"/>

                <View android:layout_width="8dp" android:layout_height="0dp"/>

                <EditText
                    android:id="@+id/inputRegion"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:hint="@string/region"
                    android:background="@drawable/input_bg"
                    android:padding="8dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:height="50dp"
                android:textColor="@color/bone"
                android:backgroundTint="@color/kombuGreen"
                android:text="@string/calculate" />

            <View android:layout_width="8dp" android:layout_height="0dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:height="50dp"
                android:textColor="@color/kombuGreen"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="@color/tan"
                app:strokeColor="@color/kombuGreen"
                app:strokeWidth="1dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
